Upgrade java, gradle and spring versions